# nna

./: README.md
cirquits/: comp_screen.dig  nna1.dig  nna8v0.dig  nna8v0_based_computer_with_screen.dig
hardware/: components.md
hw/: components.md
hw/bit-eater/: README.md  bit-eater-v1.dig
hw/bit-eater/programs/: hello_world_function.asm
hw/bit-eater1/: README.md  bit-eater-v1.dig
hw/bit-eater1/programs/: hello_world_function.asm  keyboard_test.asm  pong.asm
hw/bit-eater2/: bit-eater-v2.dig  bus-transiever.dig  display_test.dig  ram.dig
hw/bit-eater2/programs/: character.asm  hello_world.asm  hello_world_cool.asm  hello_world_text.asm  test.asm
hw/nna8v1/programs/: hello_world.asm  pong.asm
hw/nna8v2/: barrel_shifter8.dig  dlatch_shifter8.dig  docs.md  nna8v2_mpu.dig  shifter8.dig  video.dig
hw/nna8v2/programs/: build.sh  hello_world.asm
hw/nna8v3/programs/: hello_world_text.asm
programs/: hello_world.asm  hello_world_function.asm  pong.asm  test.asm
spec/: bit-eater.md  chip_variants.md  devices.md  ext_portmodes.md  nna1.md  nna8v0.md  nna8v1.md  nna8v2.md  nna8v3.md  nnaasm.md
tools/: Cargo.toml  install.sh
tools/compress/: Cargo.toml
tools/compress/src/: ffmpeg.rs  main.rs
tools/libnna/: Cargo.toml
tools/libnna/src/: extra_number_traits.rs  instruction_sets.rs  lib.rs  opargs.rs  usmol.rs
tools/nnaasm/: Cargo.toml
tools/nnaasm/src/: main.rs
tools/nnaasm/src/asm/: codegen.rs  codeparser.rs  lex.rs  mod.rs  parse.rs  parselex.rs  tokenizer.rs
