[package]
name = "libnna"
description="A library to interact with the nna instruction sets"
version = "1.0.0"
authors.workspace=true
edition.workspace=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"], optional=true }

[features]
default = []
clap = ["dep:clap"]
