[package]
name = "nnaasm"
description="Assembler for for the nna assembly language"
version = "1.0.0"
authors.workspace=true
edition.workspace=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version="0.4.21"}
clap = { version = "4.5.3", features = ["derive"] }
libnna = {path="../libnna", features=["clap"]}
stderrlog={version="0.6.0"}
